# metaMCU

./: .gitignore  .gitmodules  CMakeLists.txt
core/: cortexM3.hpp  field.hpp  fields.hpp  pin.hpp  pins.hpp  port.hpp  register.hpp  value.hpp
utils/: atomic.hpp  configutils.hpp  metautils.hpp
